# BigUtilityBox

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ccpp.yml
BUB/include/BUB/: Dummy.hpp  Profiler.hpp  TypeDisplayer.hpp  Vector2.hpp  Vector3.hpp
BUB/src/BUB/: Dummy.cpp  Profiler.cpp
Tests/: TestsVector2.cpp  TestsVector3.cpp
UnitTests/: TestsVector2.cpp  TestsVector3.cpp
